--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 .table {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   width: 400px;
   min-height: 400px;
   background-color: lightblue;
@@ -14,8 +15,15 @@
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: gray;
   border-color: black;
   border-style: solid;
   border-width: 3px;
+}
+
+.goblin {
+  width: 70px;
 }
